# note-c

./: .buildinfo  .clang-format  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CTestTestfile.cmake  CompileOptions.cmake  Dockerfile  GEMINI.md  Makefile  README.md  api_reference.html  architecture.html  calling_the_notecard_api.html  cmake_install.cmake  genindex.html  getting_started.html  index.html  library_initialization.html  n_atof.c  n_b64.c  n_cjson.c  n_cjson.h  n_cjson_helpers.c  n_cobs.c  n_edge.h  n_ftoa.c  n_helpers.c  n_hooks.c  n_hooks.c.orig  n_i2c.c  n_i2c.c.orig  n_lib.h  n_md5.c  n_printf.c  n_request.c  n_request.c.orig  (+9 more)
.cursor/rules/: architecture-docs.mdc
.devcontainer/: devcontainer.json
.devcontainer/ci/: Dockerfile  devcontainer.json
.doctrees/: api_reference.doctree  architecture.doctree  calling_the_notecard_api.doctree  environment.pickle  getting_started.doctree  index.doctree  library_initialization.doctree  ports.doctree
.github/: copilot-instructions.md
.github/actions/run_unit_tests/: Dockerfile  action.yml
.github/workflows/: ci.Dockerfile  ci.yml  cppcheck.yml  md5srv-tests.yml  notecard-binary-tests.yml  release.yml
.github/workflows/hitl/: notecard-binary-tests.yml
_sources/: architecture.rst.txt
docs/: BUILDING_MARKDOWN.md  CMakeLists.txt  api_reference.rst  architecture.rst  conf.py  fix_markdown_anchors.py  index.rst  library_initialization.rst  requirements.txt
docs/architecture/: README.md  architecture.html  architecture.json  embed-architecture-json.mjs
docs/architecture/decisions/: 0001-living-architecture-docs.md
docs/architecture/templates/: repo-architecture.md
doxygen/html/: annotated.html  classes.html  deprecated.html  files.html  functions.html  functions_vars.html  globals.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_eval.html  globals_f.html  globals_func.html  globals_func_j.html  globals_func_n.html  globals_func_s.html  globals_g.html  globals_h.html  globals_i.html  globals_j.html  globals_m.html  globals_n.html  globals_p.html  globals_s.html  globals_t.html  globals_type.html  globals_vars.html  index.html  menudata.js  n__cjson_8c.html  n__cjson_8h.html  n__cjson_8h_source.html  n__cjson__helpers_8c.html  n__hooks_8c.html  n__request_8c.html  note_8h.html  note_8h_source.html  pages.html  (+7 more)
doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  enumvalues_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  (+25 more)
doxygen/xml/: Doxyfile.xml  deprecated.xml  index.xml  n__cjson_8c.xml  n__cjson_8h.xml  n__cjson__helpers_8c.xml  n__hooks_8c.xml  n__request_8c.xml  note_8h.xml  struct_j.xml  struct_j_hooks.xml  struct_note_m_d5_context.xml  struct_note_payload_desc.xml  structerror.xml  structparse__buffer.xml  structprintbuffer.xml
scripts/: build_docs_markdown.sh  check_libc_dependencies.sh  check_runner_config.sh  run_astyle.sh  run_cppcheck.sh  run_license_scan.sh  run_scancode.sh  run_tmole.sh  run_tunnelmole.sh  run_unit_tests.sh  runmd5srv.sh  update_note_c.sh
scripts/git_hooks/: pre-push
source-research/: overview.md  research-index.md  research-manifest.json
source-research/artifacts/functions/: n_atof_c__L71__JAtoN.md  n_b64_c__L106__JB64DecodeLen.md  n_b64_c__L121__JB64Decode.md  n_b64_c__L169__JB64EncodeLen.md  n_b64_c__L174__JB64Encode.md  n_cjson_c__L1032__JPrint.md  n_cjson_c__L1051__JPrintUnformatted.md  n_cjson_c__L1059__JPrintUnformattedOmitEmpty.md  (+490 more)
source-research/frontier/: active-slice.json  work-queue.json
source-research/inventory/: artifact-status.json  claims-ledger.json  cmake-ast-validation.json  compile_commands.default.json  compile_commands.lowmem-single.json  dependency-graph.json  evidence-validation.json  graph-substrate.json  impact-report.json  progress-summary.json  repair-plan.json  source-drift.json  source-inventory.json  source-node.schema.json  symbol-index.json
source-research/worker-reports/: codecs-binary-portability.md  ftoa-number-formatting.md  high-level-helpers.md  hooks-and-adapter-layer.md  json-core.md  json-printing-closure.md  request-orchestration.md  transports.md
test/: CMakeLists.txt  README.md
test/include/: test_static.h
test/integration/: CMakeLists.txt  link_test.c
test/src/: JAddBinaryToObject_test.cpp  JAllocString_test.cpp  JAtoI_test.cpp  JBoolValue_test.cpp  JContainsString_test.cpp  JGetArray_test.cpp  JGetBinaryFromObject_test.cpp  JGetBool_test.cpp  JGetInt_test.cpp  JGetItemName_test.cpp  JGetNumber_test.cpp  JGetObject_test.cpp  JGetString_test.cpp  JGetType_test.cpp  JIntValue_test.cpp  JIsExactString_test.cpp  JIsNullString_test.cpp  JIsPresent_test.cpp  JItoA_test.cpp  JMerge_test.cpp  JNumberValue_test.cpp  JObjectf_test.cpp  JSON_number_handling_test.cpp  JStringValue_test.cpp  JType_test.cpp  NoteAdd_test.cpp  NoteAuxSerialFlowControl_test.cpp  NoteBinaryCodecDecode_test.cpp  NoteBinaryCodecEncode_test.cpp  NoteBinaryCodecMaxDecodedLength_test.cpp  NoteBinaryCodecMaxEncodedLength_test.cpp  NoteBinaryDataDecodedLength_test.cpp  NoteBinaryDataEncodedLength_test.cpp  NoteBinaryDataLength_test.cpp  NoteBinaryDataReset_test.cpp  NoteBinaryDecode_test.cpp  NoteBinaryEncode_test.cpp  NoteBinaryMaxDecodedLengthForBufferSize_test.cpp  NoteBinaryMaxDecodedLength_test.cpp  NoteBinaryMaxEncodedLengthForDecodedLength_test.cpp  (+113 more)
tests/: CMakeLists.txt  NoteRequest_test.cpp  NoteTransaction_test.cpp  README.md  n_hooks_test.cpp  n_request_test.cpp
tests/scripts/: run_unit_tests.sh
tests/src/: NoteRequestResponseJSON_test.cpp  NoteRequestResponse_test.cpp  NoteRequestWithRetry_test.cpp  NoteRequest_test.cpp  NoteTransaction_test.cpp
(+747 files in other folders)
